Remove game from repository and load as iframe

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
         content="Website voor het 12e Lustrum der Civitas Studiosorum Reformatorum.">
@@ -30,10 +31,7 @@
     <section class="game">
         <a class="anchor" id="game"></a>
         <h2>Game</h2>
-        <div class="container">
-            <div class="game-container">
-            </div>
-        </div>
+        <div class="game-container" id="game-container"></div>
     </section>
 </body>
 
