--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
         <div class="container">
             <div class="menu d-flex flex-column flex-md-row justify-content-between align-items-center">
                 <a class="d-none d-md-inline-block" href="#home">Home</a>
+                <a class="d-none d-md-inline-block" href="#themafilm">Themafilm</a>
                 <a class="d-none d-md-inline-block" href="#game">Game</a>
+                <a class="d-none d-md-inline-block" href="#instagram">Instagram</a>
+
             </div>
         </div>
     </nav>
@@ -27,10 +30,32 @@
     <section class="head">
     </section>
 
+    <section class="video">
+        <a class="anchor" id="themafilm"></a>
+        <h2>Themafilmp</h2>
+        <div class="container">
+            <div class="video-container">
+                <div class="youtube-container closed">
+                    <div class="embed-responsive embed-responsive-16by9" id="player"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="game">
-        <h2>Game</h2>
         <a class="anchor" id="game"> </a>
+        <h2>Game</h2>
         <div class="game-container" id="game-container"></div>
+    </section>
+
+    <section class="instagram">
+        <h2>Instagram</h2>
+        <a class="anchor" id="instagram"></a>
+        <div class="instagram-container">
+            <a href="https://www.instagram.com/lustrumcsr/"> 
+                <img class="instagram-embed" src="${require('../src/assets/images/lustrumcsr_nametag.png')}" alt="Lustrum Instagram" >
+            </a>
+        </div>
     </section>
 </body>
 
