--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,6 @@
                 <a class="d-none d-md-inline-block" href="#themafilm">Themafilm</a>
                 <a class="d-none d-md-inline-block" href="#game">Game</a>
                 <a class="d-none d-md-inline-block" href="#instagram">Instagram</a>
-
             </div>
         </div>
     </nav>
@@ -32,7 +31,7 @@
 
     <section class="video">
         <a class="anchor" id="themafilm"></a>
-        <h2>Themafilmp</h2>
+        <h2>Themafilm</h2>
         <div class="container">
             <div class="video-container">
                 <div class="youtube-container closed">
