--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,8 +31,9 @@
         <div class="container">
             <div class="menu d-flex flex-column flex-md-row justify-content-between align-items-center">
                 <a class="d-none d-md-inline-block" href="#home">Home</a>
-                <a class="d-none d-md-inline-block" href="opening">Lustrum Opening</a>
-                <a class="d-none d-md-inline-block" href="thema">Thema Bekendmaking</a>
+                <!-- <a class="d-none d-md-inline-block" href="opening">Lustrum Opening</a> -->
+                <a class="d-none d-md-inline-block" href="lustrumweek">Lustrum Week</a>
+                <a class="d-none d-md-inline-block" href="thema">Thema</a>
             </div>
         </div>
     </nav>
