--- a/src/pages/thema/thema.html
+++ b/src/pages/thema/thema.html
@@ -30,7 +30,7 @@
         </a>
         <div class="container">
             <div class="menu d-flex flex-column flex-md-row justify-content-between align-items-center">
-                <a class="d-none d-md-inline-block" href="../">Home</a>
+                <a class="d-none d-md-inline-block" href="#home">Home</a>
                 <a class="d-none d-md-inline-block" href="#themafilm">Themafilm</a>
                 <a class="d-none d-md-inline-block" href="#game">Game</a>
                 <a class="d-none d-md-inline-block" href="#instagram">Instagram</a>
