Recreate index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
 <body>
     <div id="zandloper" class="zandloper">
         
-        <img id="zandloper_kapot" class="kapot" src="${require('../../assets/images/ZandloperKapot.png')}"/>
-        <img id="zandloper_heel" class="heel" src="${require('../../assets/images/ZandloperHeel.png')}"/>
+        <img id="zandloper_kapot" class="kapot" src="${require('../src/assets/images/ZandloperKapot.png')}"/>
+        <img id="zandloper_heel" class="heel" src="${require('../src/assets/images/ZandloperHeel.png')}"/>
     </div>
 
     <nav class="site-header">
         <a class="logo-titel d-inline-block" href="">
-            <img src="${require('../../assets/images/themaheader.png')}"
+            <img src="${require('../src/assets/images/themaheader.png')}"
                     alt="Logo menu" />
         </a>
         <div class="container">
@@ -39,57 +39,57 @@
     <a class="anchor glow" id="top"></a>
 
     <div class="thema thema-container">
-        <img class="thema-plaetje" src="${require('../../assets/images/thematitel.png')}" alt="Lustrum Instagram" >
+        <img class="thema-plaetje" src="${require('../src/assets/images/thematitel.png')}" alt="Lustrum Instagram" >
     </div>
 
     <div class="divider">
-        <img class="boven" src="${require('../../assets/images/DividerBoven.png')}">
+        <img class="boven" src="${require('../src/assets/images/DividerBoven.png')}">
     </div>
 
     <div class="overzicht aankomend" >
         <a class="anchor" id="activiteiten"></a>
         <h2 class="titel">Aankomende Activiteiten</h2>
         <div class="activiteit">
-            <img class="activiteit-plaetje" src="${require('../../assets/images/home-Lustrumopening.png')}" alt="Lustrum Week">
+            <img class="activiteit-plaetje" src="${require('../src/assets/images/home-Lustrumopening.png')}" alt="Lustrum Week">
         </div>
         <div class="activiteit">
             <a href="lustrumweek">
-                <img class="activiteit-plaetje" src="${require('../../assets/images/home-Lustrumweek.png')}" alt="Lustrum Week">
+                <img class="activiteit-plaetje" src="${require('../src/assets/images/home-Lustrumweek.png')}" alt="Lustrum Week">
             </a>
         </div>
     </div>
 
     <div class="divider">
-        <img class="tussen" src="${require('../../assets/images/DividerTussen.png')}">
+        <img class="tussen" src="${require('../src/assets/images/DividerTussen.png')}">
     </div>
 
     <div class="overzicht geweest">
         <h2 class="titel">Vorige Activiteiten</h2>
         <div class="activiteit">
             <a href="thema">
-                <img class="activiteit-plaetje" src="${require('../../assets/images/home-Themapresentatie.png')}" alt="Thema Presentatie">
+                <img class="activiteit-plaetje" src="${require('../src/assets/images/home-Themapresentatie.png')}" alt="Thema Presentatie">
             </a>
         </div>
     </div>
 
     <div class="divider">
-        <img class="tussen" src="${require('../../assets/images/DividerTussen.png')}">
+        <img class="tussen" src="${require('../src/assets/images/DividerTussen.png')}">
     </div>
 
     <div class="instagram">
         <a class="anchor" id="instagram"></a>
-        <!-- <div class="kopje"><img class="plaetje" src="${require('../../assets/images/KopjeInstagram.png')}"/></div> -->
+        <!-- <div class="kopje"><img class="plaetje" src="${require('../src/assets/images/KopjeInstagram.png')}"/></div> -->
         <h2 class="titel">Instagram</h2>
         <div class="instagram-container">
             <a href="https://www.instagram.com/lustrumcsr/"> 
-                <img class="instagram-embed" src="${require('../../assets/images/InstagramNametag.png')}" alt="Lustrum Instagram" >
+                <img class="instagram-embed" src="${require('../src/assets/images/InstagramNametag.png')}" alt="Lustrum Instagram" >
             </a>
             <a href="https://www.instagram.com/lustrumcsr/">lustrumcsr</a>
         </div>
     </div>
     
     <div class="divider">
-        <img class="onder" src="${require('../../assets/images/DividerOnder.png')}">
+        <img class="onder" src="${require('../src/assets/images/DividerOnder.png')}">
     </div>
 </body>
 
