--- a/src/pages/lustrumweek/lustrumweek.html
+++ b/src/pages/lustrumweek/lustrumweek.html
@@ -15,13 +15,13 @@
 
 <body>
     <nav class="site-header">
-        <a class="logo-titel d-inline-block" href="../">
+        <a class="logo-titel d-inline-block" href="./">
             <img src="${require('../../assets/images/themaheader.png')}"
                     alt="Logo menu" />
         </a>
         <div class="container">
             <div class="menu d-flex flex-column flex-md-row justify-content-between align-items-center headerbuttons">
-                <a class="d-none d-md-inline-block" href="../">Home</a>
+                <a class="d-none d-md-inline-block" href="./">Home</a>
                 <a class="d-none d-md-inline-block" href="#top">Top</a>
                 <a class="d-none d-md-inline-block" href="#programma">Programma</a>
                 <!-- <a class="d-none d-md-inline-block" href="#poster">Poster</a> -->
