--- a/src/pages/thema/thema.html
+++ b/src/pages/thema/thema.html
@@ -21,13 +21,13 @@
     </div>
 
     <nav class="site-header">
-        <a class="logo-titel d-inline-block" href="../">
+        <a class="logo-titel d-inline-block" href="./">
             <img src="${require('../../assets/images/themaheader.png')}"
                     alt="Logo menu" />
         </a>
         <div class="container">
             <div class="menu d-flex flex-column flex-md-row justify-content-between align-items-center">
-                <a class="d-none d-md-inline-block" href="../">Home</a>
+                <a class="d-none d-md-inline-block" href="./">Home</a>
                 <a class="d-none d-md-inline-block" href="#top">Top</a>
                 <a class="d-none d-md-inline-block" href="#themafilm">Themafilm</a>
                 <a class="d-none d-md-inline-block" href="#game">Game</a>
