Make tijdloos on /lustrum12/ return to csrdelft.nl

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <nav class="site-header">
-        <a class="logo-titel d-inline-block" href="">
+        <a class="logo-titel d-inline-block" href="./">
             <img src="${require('../src/assets/images/themaheader.png')}"
                     alt="Logo menu" />
         </a>
