Voeg openingspagina toe

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,9 @@
         <a class="anchor" id="activiteiten"></a>
         <h2 class="titel">Aankomende Activiteiten</h2>
         <div class="activiteit">
-            <img class="activiteit-plaetje" src="${require('../src/assets/images/home-Lustrumopening.png')}" alt="Lustrum Week">
+            <a href="opening">
+                <img class="activiteit-plaetje" src="${require('../src/assets/images/home-Lustrumopening.png')}" alt="Lustrum Week">
+            </a>
         </div>
         <div class="activiteit">
             <a href="lustrumweek">
