--- a/src/pages/opening/opening.html
+++ b/src/pages/opening/opening.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
 
@@ -16,12 +14,24 @@
 </head>
 
 <body>
-    <div>
-        Dikke lustrum opening
-    </div>
-    <div id="zandloper" class="zandloper">
-        <img id="zandloper_kapot" class="kapot" src="${require('../../assets/images/ZandloperKapot.png')}"/>
-        <img id="zandloper_heel" class="heel" src="${require('../../assets/images/ZandloperHeel.png')}"/>
+    <nav class="site-header">
+        <a class="logo-titel d-inline-block" href="./">
+            <img src="${require('../../assets/images/themaheader.png')}"
+                    alt="Logo menu" />
+        </a>
+        <div class="container">
+            <div class="menu d-flex flex-column flex-md-row justify-content-between align-items-center">
+                <a class="d-none d-md-inline-block" href="./">Home</a>
+                <a class="d-none d-md-inline-block" href="#top">Top</a>
+                <a class="d-none d-md-inline-block" href="#poster">Poster</a>
+            </div>
+        </div>
+    </nav>
+    <a id="top"></a>
+    <a id="poster"></a>
+    <div class="poster">
+        <img src="${require('../../assets/images/lo-poster.png')}"
+        alt="Logo menu" />
     </div>
 </body>
 
