--- a/src/pages/thema.html
+++ b/src/pages/thema.html
@@ -43,30 +43,30 @@
         <img class="thema-plaetje" src="${require('/src/assets/images/common/thematitel.png')}" alt="Lustrum Thema Titel" >
     </div>
 
-	<div class="divider"><img class="boven" src="${require('/src/assets/images/common/DividerBoven.png')}"></div>
+	<div class="divider" id="themafilm"><img class="boven" src="${require('/src/assets/images/common/DividerBoven.png')}"></div>
 
 
 	<div class="video">
 		<h2 class="titel">Themafilm</h2>
-		<div class="container video-container">
-			<div class="youtube-container closed">
-				<div class="embed-responsive ratio ratio-16x9" id="player">
-				</div>
-			</div>
-		</div>
+		<div class="container" align="center">
+            <div class="video-container">
+                <div class="youtube-container closed">
+                    <div class="embed-responsive embed-responsive-16by9" id="player"></div>
+                </div>
+            </div>
+        </div>
 	</div>
 
-    <div class="divider"><img class="tussen" src="${require('/src/assets/images/common/DividerTussen.png')}">></div>
+    <div class="divider"><img class="tussen" src="${require('/src/assets/images/common/DividerTussen.png')}"></div>
 
 
 	<div class="game">
-		<a class="anchor glow" id="game"> </a>
-		<h2 class="titel">Game</h2>
-		<div class="game-container" id="game-container">
-		</div>
-	</div>
+        <a class="anchor glow" id="game"> </a>
+        <h2 class="titel">Game</h2>
+        <div class="game-container" id="game-container"></div>
+    </div>
 
-    <div class="divider"><img class="tussen" src="${require('/src/assets/images/common/DividerTussen.png')}">></div>
+    <div class="divider"><img class="tussen" src="${require('/src/assets/images/common/DividerTussen.png')}"></div>
 
 
 	<div class="instagram">
@@ -81,13 +81,13 @@
 		</div>
 	</div>
 
-    <div class="divider"><img class="tussen" src="${require('/src/assets/images/common/DividerTussen.png')}">></div>
+    <div class="divider"><img class="tussen" src="${require('/src/assets/images/common/DividerTussen.png')}"></div>
 
 	<div class="commissie">
 		<a class="anchor" id="commissie"></a>
 		<h2 class="titel">Commissie</h2>
 		<div class="commissie-container">
-			<img class="commissiefoto" src="${require('/src/assets/images/pages/thema/commissiefoto.png')}" alt="Lustrum Instagram" >
+			<img class="commissiefoto" src="${require('/src/assets/images/pages/thema/commissiefoto.png')}" alt="Lustrum Instagram"/>
 			<h4> LustrumCie Van Stiphout </h4>
 			<a>Am. Van Stiphout (Praeses)</a>
 			<a>Am. De Wilde jr. (Fiscus)</a>
